# rsgain

./: .gitattributes  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  README.md  README.md.backup  cmake_build.yml  vcpkg.json
.github/workflows/: build.yml  cmake_build.yml  release.yml
config/: PKGBUILD  config.h.in  custom-triplet.cmake  default.ini  overrides.ini  rsgain.manifest.in  vcpkg.cmake  versioninfo.rc.in
config/presets/: default.ini  ebur128.ini  loudgain.ini  no_album.ini
docs/: BUILDING.md  BUILDING.md.backup  loudgain.1  rsgain.1
scripts/: loudgain-scanner.py  rgbpm  rgbpm2  scan.py
src/: CMakeLists.txt  easymode.cpp  easymode.h  easymode.hpp  loudgain.c  loudgain.h  output.c  output.cpp  output.h  output.hpp  rsgain.c  rsgain.cpp  rsgain.h  rsgain.hpp  scan.c  scan.cpp  scan.h  scan.hpp  tag.cc  tag.cpp  tag.h  tag.hpp
